# bdt

./: .gitignore  TODO  configure.ac
src/: Makefile.am  bash_profile  bashrc  bdt-basichost-chroot  bdt-basichost-directories  bdt-basichost-populate  bdt-basichost-populate2  bdt-prephost-download  bdt-prephost-formatdisk  bdt-prephost-install  bdt-prephost-remove  bdt-prephost-sync  bdt-prephost-user  bdt-version-check-10.0  bdt.pc.in  commands.cc  commands.hh  header.cc  header.hh  main.cc
src/tmpsys/8.4/: bash.sh  binutils-2.sh  binutils.sh  bison.sh  bzip.sh  coreutils.sh  dejagnu.sh  diffutils.sh  ending.sh  expect.sh  file.sh  findutils.sh  gawk.sh  gcc-2.sh  gcc.sh  gettext.sh  glibc.sh  grep.sh  gzip.sh  libstdc++.sh  linux-header.sh  m4.sh  make.sh  ncurses.sh  patch.sh  perl.sh  python.sh  sed.sh  tamplet.sh  tar.sh  tcl.sh  temp-sys.sh  texinfo.sh  xz.sh
