
AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = bdt
dist_bin_SCRIPTS = bdt-prephost-download bdt-prephost-formatdisk bdt-prephost-install bdt-prephost-remove bdt-prephost-sync bdt-prephost-user bdt-version-check


bdt_SOURCES = \
	main.cc \
	commands.cc

bdt_LDFLAGS = 

bdt_LDADD = 


